SignalRCore/Docker/MultipleSignalRServers/signalrserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: web-deploy
    labels:
        app: web
spec:
    replicas: 5
    selector:
        matchLabels:
            app: web
    template:
        metadata:
            labels:
                app: web
        spec:
            terminationGracePeriodSeconds: 1
            containers:
            -   name: signalrserver-pod
                image: signalrserver:latest
                imagePullPolicy: Never
                ports:
                -   containerPort: 80
