SignalRCore/Docker/MultipleSignalRServers/ingress.yaml
apiVersion: v1
kind: Service
metadata:
    name: signalr-service
spec:
    type: LoadBalancer
    ports:
    -   port: 5051
        targetPort: 80
    selector:
        app: web

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signalrredis-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.org/websocket-services: "signalr-service"
spec:
  ingressClassName: nginx-example
  rules:
  - host: signal.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: signalr-service
            port:
              number: 5051
              
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
  # name: signalrredis-ingress
  # annotations:
    # nginx.ingress.kubernetes.io/affinity: "cookie"
    # nginx.ingress.kubernetes.io/session-cookie-name: "route"
    # nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
# spec:
  # rules:
  # - host: signalrredis.local
    # http:
      # paths:
        # - path: /
          # backend:
            # serviceName: signalrredis-service
            # servicePort: 6060
